# Timelapse_Manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .trivyignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  alembic.ini  ffmpeg-pin.json  pyproject.toml  timelapse-manager.spec
.gitea/workflows/: ffmpeg-refresh.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_empty_baseline.py  002_create_core_schema.py  003_session_auth_columns.py  004_add_paused_lifecycle_state.py  005_add_project_campaign_bounds.py  006_add_user_preferences.py  007_add_ldap_auth_columns.py  008_add_ldap_tls_ca_cert.py  009_add_camera_default_credentials.py  010_add_project_stream_identity.py  011_add_frame_scene_metadata.py  012_add_event_alert_lifecycle.py  013_add_project_ptz.py  014_add_camera_device_hostname.py  015_add_frame_excluded_at.py  016_add_ssrf_settings.py  017_add_render_job_export_kind.py  018_add_frame_capture_timestamp_inferred.py  019_add_frame_capture_reason.py  020_add_project_exact_time_anchors.py  021_add_exact_time_fire_table.py  022_add_project_event_triggers.py
dev/: gen_dev_cert.py  gen_sbom.py  sign_release.sh
dev/mock_cameras/: ffmpeg_testsrc.py  http_snapshot.py  mediamtx.conf  run.py
dev/mock_cameras/sample_frames/: generate.py
docker/: Dockerfile  compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: cameras.md  configuration.md  ffmpeg-refresh.md  installation.md  monitoring.md  pi-footprint.md  rendering.md  scheduling.md  security-audit.md  storage.md  ui-style-guide.md  verifying-releases.md  web-ui.md
packaging/: build-linux-packages.sh  install.sh  nfpm.yaml  refresh-ffmpeg-pin.py  release.sh
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
packaging/systemd/: timelapse-manager.service
src/timelapse_manager/: __init__.py  app.py  ffmpeg_pin.py  logging.py  paths.py  runtime.py  version.py
tests/: conftest.py
tests/abuse/: __init__.py  test_no_arbitrary_execution.py  test_ssrf_deny_list.py  test_ssrf_stream_uri.py  test_subprocess_hardening.py
tests/api/: test_alerts_api.py  test_campaign_bounds_api.py  test_frames_admin.py  test_frames_import_api.py  test_metrics.py  test_milestones_api.py  test_projected_storage_api.py  test_projects_api.py  test_projects_schedule_api.py  test_renders_api.py
tests/cameras/: test_event_sources.py  test_onvif_events.py  test_vapix_events.py
tests/e2e/: _serve.py  conftest.py  test_audit_scroll.py  test_auth_about.py  test_camera_form_discover.py  test_cameras.py  test_drawer.py  test_events_scroll.py  test_frame_bulk_actions.py  test_frame_drawer.py  test_frame_selection.py  test_frames_density.py  test_frames_drag_select.py  test_frames_export.py  test_frames_global.py  test_frames_jumps.py  test_frames_offset.py  test_frames_scroll.py  test_frames_scroll_announce.py  test_frames_scrubber.py  test_frames_time_nav.py  test_frames_zoom_strip.py  test_icons.py  test_nav.py  test_new_project.py  test_project_detail.py  test_project_tabs.py  test_projects_table.py  test_render_trigger.py  test_settings.py  test_smoke.py  test_theme.py  test_users.py
tests/integration/: test_api.py  test_api_cameras.py  test_backward_compat.py  test_camera_default_credentials.py  test_camera_default_credentials_gaps.py  test_camera_offline_alert.py  test_capture_reconnect.py  test_core_schema_migration.py  test_disk_gate.py  test_feature_integration_av1_prune.py  test_frozen_frame.py  test_http_jpeg_auth.py  test_http_jpeg_capture.py  test_live_autoquery.py  test_live_cameras.py  test_migration.py  test_migration_018.py  test_realtime_capture.py  test_restart_survival.py  test_smoke_server.py  test_soak.py
tests/unit/: test_adapters.py  test_anchors.py  test_app_factory.py  test_autoquery.py  test_backoff_math.py  test_camera_probe_timeout.py  test_campaign_bounds.py  test_cli.py  test_config.py  test_create_local_user.py  test_csrf.py  test_design_tokens.py  test_discovery.py  test_discovery_enrich.py  test_effective_credentials.py  test_estimator.py  test_event_topics.py  test_event_triggers.py  test_frame_writer.py  test_geo.py  test_geolocation.py  test_healthz.py  test_host_resolution.py  test_interval.py  test_localdt_filter.py  test_logging.py  test_models.py  test_passwords.py  test_plan_next.py  test_preflight.py  test_probing.py  test_ptz.py  test_ptz_supervisor.py  test_render_settings.py  test_render_settings_auto_chapters.py  test_ribbon.py  test_scene_metadata.py  test_schedule_dst.py  test_schedule_sun.py  test_schedule_windows.py  (+9 more)
tests/web/: test_about_page.py  test_affordance_visibility.py  test_alerts_web.py  test_authorization.py  test_camera_defaults_web.py  test_camera_geolocation_web.py  test_camera_manage.py  test_camera_screen.py  test_campaign_bounds_web.py  test_capture_health.py  test_capture_mode_web.py  test_capture_schedule_form.py  test_cli_coexistence.py  test_component_assets.py  test_csrf_web.py  test_dashboard_nav_batch_settings.py  test_drawers.py  test_event_triggers_web.py  test_events_keyset.py  test_first_run.py  test_frame_detail_drawer.py  test_frame_exclude_routes.py  test_frame_image.py  test_frame_jumps.py  test_frame_metadata_web.py  test_frames_bulk_routes.py  test_frames_export_routes.py  test_frames_global_keyset.py  test_frames_import_regression.py  test_frames_import_web.py  test_frames_keyset.py  test_frames_offset_routes.py  test_frames_range_routes.py  test_frames_scrubber.py  test_frames_selection_bar.py  test_frames_time_nav.py  test_icons.py  test_ldap_settings_web.py  test_log_redaction.py  test_login_about_screens.py  (+29 more)
(+323 files in other folders)
